--- a/backend/package.json
+++ b/backend/package.json
@@ -15,5 +15,10 @@
     "mssql": "^3.3.0",
     "promise": "^7.1.1",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "mocha": "^3.2.0",
+    "mockery": "^2.0.0",
+    "sinon": "^1.17.7"
   }
 }
