--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "mocha": "^3.2.0",
     "mockery": "^2.0.0",
+    "should": "^11.1.2",
     "sinon": "^1.17.7"
   }
 }
